<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">"Amplify"</string>
<string name="version">"Version"</string>
<string name="title_activity_material_settings">"Amplify"</string>
<string name="title_home">"Home"</string>
<string name="title_wakelocks">"Wakelocks"</string>
<string name="title_alarms">"Alarms"</string>
<string name="title_regex">"Regex"</string>
<string name="navigation_drawer_open">"Open navigation drawer"</string>
<string name="navigation_drawer_close">"Close navigation drawer"</string>
<string name="action_search">"Search"</string>
<string name="action_sort_by_count">"Sort by count"</string>
<string name="action_sort_by_time">"Sort by time"</string>
<string name="action_settings">"Settings"</string>
<string name="action_reset_stats">"Reset Stats"</string>
<string name="card_donate_title">"PRO FEATURES"</string>
<string name="card_donate_subtitle">"Support your local developer"</string>
<string name="card_global_title">"GLOBAL STATS"</string>
<string name="card_global_subtitle">"Our combined stats"</string>
<string name="card_local_title">"DEVICE STATS"</string>
<string name="card_local_subtitle">"View your progress"</string>
<string name="card_settings_title">"SETTINGS"</string>
<string name="card_settings_subtitle_alarm">"Control this alarm"</string>
<string name="card_settings_subtitle_wakelock">"Control this wakelock"</string>
<string name="card_description_title">"DESCRIPTION"</string>
<string name="card_description_subtitle">"Why is this thing eating your battery?"</string>
<string name="card_description_subtitle_regex">"What will this do?"</string>
<string name="category_unbounced">"Limited"</string>
<string name="category_safe">"Safe to limit"</string>
<string name="category_unknown">"Unknown"</string>
<string name="category_not_safe">"Not safe to limit"</string>
<string name="category_error">"Error"</string>
<string name="alert_noiab_title">"Pro features unavailable"</string>
<string name="alert_noiab_content">"There's a problem with In-App Billing.  This is usually because Lucky Patcher is installed, or the Play Store is Greenified.  <a href="http://forum.xda-developers.com/xposed/modules/mod-nlpunbounce-reduce-nlp-wakelocks-t2853874">Visit the forum</a> for support."</string>
<string name="dialog_ok">"OK"</string>
<string name="tasker_on">"On"</string>
<string name="tasker_off">"Off"</string>
<string name="tasker_reset_stats">"Reset stats"</string>
<string name="tasker_choose_wakelock">"Choose the wakelock to adjust."</string>
<string name="tasker_choose_alarm">"Choose the alarm to adjust."</string>
<string name="tasker_welcome">"Welcome to Amplify's Tasker plugin."</string>
<string name="tasker_which_task">"Do you want to change settings for a Wakelock or an Alarm, or do you want to reset stats for your device?"</string>
<string name="tasker_task_wakelock">"CHANGE WAKELOCK"</string>
<string name="tasker_task_alarm">"CHANGE ALARM"</string>
<string name="tasker_task_reset">"RESET STATS"</string>
<string name="alert_nopro_title">"This is a Pro feature"</string>
<string name="alert_nopro_content">"To limit non-standard wakelocks and alarms, you need to purchase a Pro Features package from the Main Amplify screen."</string>
<string name="alert_unknown_alarm_title">"Limit unknown alarm?"</string>
<string name="alert_unknown_alarm_content">"This alarm hasn't been proven safe to limit.  Would you like to limit it anyway?"</string>
<string name="dialog_unbounce">"LIMIT"</string>
<string name="dialog_cancel">"CANCEL"</string>
<string name="tasker_choose_settings">"Choose the settings you want."</string>
<string name="alert_unknown_wakelock_title">"Limit unknown wakelock?"</string>
<string name="alert_unknown_wakelock_content">"This wakelock hasn't been proven safe to limit.  Would you like to limit it anyway?"</string>
<string name="dialog_delete">"DELETE"</string>
<string name="alert_delete_stats_title">"Delete all stats?"</string>
<string name="alert_delete_stats_content">"This will reset stats for all of your wakelocks and alarms!"</string>
<string name="title_settings">"Settings"</string>
<string name="alert_reset_settings_title">"Reset to defaults?"</string>
<string name="alert_reset_settings_content">"This will reset all of the settings for alarms and wakelocks!"</string>
<string name="alert_disable_service_blocking_title">"Disable Service Blocking?"</string>
<string name="alert_disable_service_blocking_content">"This will disable the service blocking, please reboot after this change"</string>
<string name="dialog_reset">"RESET"</string>
<string name="reset_settings_confirmation">"Settings have been reset to defaults."</string>
<string name="dialog_save">"SAVE"</string>
<string name="desc_unknown">"We don't have any information about this event, yet.  This may not be safe to limit.  Only do so if you know what you're doing and you know how to disable Xposed at boot.  We're working hard to collect information about every major wakelock and alarm.  Please be patient while we collect this information."</string>
<string name="desc_nlpwakelock">"NlpWakeLock is safe to limit.  It's used by Google Play Services to determine your rough location using a combination of cell towers and WiFi.  Once it has your location, it stores it locally so other apps, like Google Now, can access your location without using GPS or getting a new fix.  Recommended settings are between 180 and 600 seconds."</string>
<string name="desc_nlpcollectorwakelock">"NlpCollectorWakeLock is safe to limit.  It's used by Google Play Services to determine your rough location using a combination of cell towers and wifi.  Once it has your location, it sends it back to Google so they can expand their database of WiFi locations.  Recommended settings are between 180 and 600 seconds."</string>
<string name="desc_alarmmanager">"This provides access to the system alarm services. When an alarm goes off, the Intent that had been registered for it is broadcast by the system, automatically starting the target application if it is not already running. Registered alarms are retained while the device is asleep (and can optionally wake the device up if they go off during that time), but will be cleared if it is turned off and rebooted."</string>
<string name="desc_audiooffload">"Audio playback when your screen is turned off.  If you disable this, you won't have background audio or music able to play when your screen is off."</string>
<string name="desc_activitymanagerlauncher">"Interacts with the overall activities running in the system. If you limit this, nothing will work well."</string>
<string name="desc_windowmanager">"This is an Android System level WakeLock.  The interface that apps use to talk to the window manager - meaning, applications will require a WindowManager lock everytime they need to be shown on the screen."</string>
<string name="desc_rilj">"RILJ keeps your device awake while processing phone actions, such as phone calls and cell tower communication."</string>
<string name="desc_syncloopwakelock">"This is the WakeLock used by Android SyncManager to Sync accounts like Google+, Twitter, Linkedin, Gmail etc. The higher the unbouncing, the longer the amount of time until your accounts will get synced again."</string>
<string name="desc_icing">"ICING is a Google Services WakeLock.  Currently looking for more details."</string>
<string name="desc_startingalertservice">"This WakeLock can usually be associated with Calendar, although may effect other apps such as messaging. If your Calendar has notifications / alerts it can hold this WakeLock."</string>
<string name="desc_audiomix">"This WakeLock handles Touch Sounds and Alert Sounds among others. It has plagued some devices even with Touch Sounds turned off."</string>
<string name="desc_locationmanagerservice">"As the name implies. This is not typically a high battery drainer for some it might held a big wakelock."</string>
<string name="desc_audioin">"This wakelock is used to hold the device awake listening for Google Search/Hotword Detection. Okay, Google"</string>
<string name="desc_nfcservicemroutingwakelock">"Related to NFC service routing detected tags to the appropriate application."</string>
<string name="desc_wakefulintentservicegcoreulrlocationreportingservice">"Used by Google Location Services to report your current location."</string>
<string name="desc_vzwgpslocationprovider">"Verizon specific location service used for cell tower statistics."</string>
<string name="desc_hangouts_rtcs">"Google Hangouts.  If you limit this, Hangouts will no longer work."</string>
<string name="desc_gcm_conn">"Google Cloud Messaging. Sends lightweight messages to your apps. Responsible for sending push notifications to your phone, for all apps."</string>
<string name="desc_google_c2dm">"Cloud to Device Messaging (C2DM) is a service that helps developers send data to their apps on devices. The service provides a mechanism that servers can use to tell mobile applications to contact the server to fetch updated application or user data. The C2DM service handles all aspects of queueing of messages and delivery to the target application running on target devices. This service was deprecated since 2012 but there are still apps that are using this service instead of the new and improved GCM."</string>
<string name="desc_timedeventqueue">"This is a core part of Android that is best left alone. It queues up all incoming events."</string>
<string name="desc_comgoogleandroidgmsnlpalarm_wakeup_locator">"This alarm is safe to limit.  It's used by Google Play Services to determine your rough location using a combination of cell towers and WiFi.  Once it has your location, it stores it locally so other apps, like Google Now, can access your location without using GPS or getting a new fix.  Recommended settings are between 180 and 600 seconds."</string>
<string name="desc_comgoogleandroidgmsnlpalarm_wakeup_activity_detection">"This alarm is safe to limit.  It's used by Google Play Services to determine your rough location using a combination of cell towers and wifi.  Once it has your location, it sends it back to Google so they can expand their database of WiFi locations.  Recommended settings are between 180 and 600 seconds."</string>
<string name="desc_comgoogleandroidappshangoutsupdate_notification">"The listener which updates your Google Hangouts notifications."</string>
<string name="desc_comandroidinternaltelephonydatastall">"Wakelock from com.android.phone (Phone app) when using Data through Cellular towers. Using WiFi will not trigger this alarm. Usually it gets through the roof while using data, especially on a mediocre connection."</string>
<string name="desc_e">"Belongs to Tasker"</string>
<string name="desc_m">"Belongs to Tasker"</string>
<string name="desc_gcoreflp">"Belongs to the location acquisition framework"</string>
<string name="desc_networkstats">"NetworkStatsService wakelock is held while collecting and recording statistics from the kernel"</string>
<string name="desc_fingerprint_scanner_static">"Related to Google+ - FingerprintScannerIntentService. Piece of code: com.google.android.apps.plus.service.FingerprintScannerIntentService."</string>
<string name="card_button_reset">"RESET"</string>
<string name="stat_loading">"Loading..."</string>
<string name="card_settings_subtitle_service">"Control this service"</string>
<string name="stat_service_allowed">"Services started"</string>
<string name="stat_service_blocked">"Services blocked"</string>
<string name="service_switch_allow">"Allow"</string>
<string name="service_switch_deny">"Deny"</string>
<string name="action_new_custom_item">"New"</string>
<string name="tasker_task_wakelock_regex">"CHANGE WAKELOCK (REGEX)"</string>
<string name="tasker_task_alarm_regex">"CHANGE ALARM (REGEX)"</string>
</resources>