<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ryansteckler.nlpunbounce.MaterialSettingsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    >

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_new_custom"
        android:title="@string/action_new_custom_item"
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_sort_by_count"
        android:showAsAction="always" />



</menu>
