<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ryansteckler.nlpunbounce.MaterialSettingsActivity" >

    <item android:id="@+id/wakelock_switch"
        android:titleCondensed=""
        android:title=""
        android:actionViewClass="android.widget.Switch"
        android:showAsAction="always"
        android:visible="false"/>

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_sort_by_count"
        android:showAsAction="always" />

    <item android:id="@+id/action_reset_stats"
        android:title="@string/action_reset_stats"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
